--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -107,15 +107,19 @@
         jqDoc.find('#filter').attr('disabled','true');
       </script>
 		#end
-    #set($filtersShouldBeShown = false)
-		#if(($resource_folder!='user') && ($resource_folder!='roles'))
-  		#set($sessionFilterString = $sessionData.getCustomString('filtering_on'))
-  		#set($filtersShouldBeShown = ($sessionFilterString=='true'))
-  		#if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() == "REPORT"))
-  			#set($filtersShouldBeShown = true)
-  		#end
-		#end
-	  #if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
+	#if($mobile_device)
+	  #set($filtersShouldBeShown = true)
+	#else
+      #set($filtersShouldBeShown = false)
+	  #if(($resource_folder!='user') && ($resource_folder!='roles'))
+	  #set($sessionFilterString = $sessionData.getCustomString('filtering_on'))
+	  #set($filtersShouldBeShown = ($sessionFilterString=='true'))
+	  #if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() == "REPORT"))
+		#set($filtersShouldBeShown = true)
+	  #end
+	  #end
+	#end
+	#if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
 	    <script language=Javascript>
        var jqDoc = $(top.document);
  	     jqDoc.find('#button_new').removeAttr('disabled');
@@ -127,12 +131,12 @@
        jqDoc.find('#button_fullscreen').removeAttr('disabled');
        jqDoc.find('#button_apps').removeAttr('disabled');
        jqDoc.find('#button_forms').removeAttr('disabled');
-			 #if($filtersShouldBeShown)
-			   var jqFilter = jqDoc.find('#filter');
-				 if (!jqFilter.hasClass('selected')) {
-				   jqFilter.click();
-				 }
-			 #end
+		 #if($filtersShouldBeShown)
+		   var jqFilter = jqDoc.find('#filter');
+			 if (!jqFilter.hasClass('selected')) {
+			   jqFilter.click();
+			 }
+		 #end
       </script>
     #else
       <script language=Javascript>
