Style filter boxes in reports with headings

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
@@ -82,11 +82,11 @@
     	  #set($moduleActions = $view.getModuleActions($internalModuleName))
     	  <h2><span><img src="resources/icons/applications/tango/$module.getIconPath()"/> 
     		$module
-    		#if($mobile_device && ($moduleActions.size()>0) && ($browser_name != "Konqueror"))
-    		  #foreach($moduleAction in $moduleActions)
-    			<button class="moduleaction" internalmodulename="$internalModuleName" actionname="$moduleAction.getActionName()">&laquo; $moduleAction &raquo;</button>
-    		  #end
-    		#end
+##    		#if($mobile_device && ($moduleActions.size()>0) && ($browser_name != "Konqueror"))
+##    		  #foreach($moduleAction in $moduleActions)
+##    			<button class="moduleaction" internalmodulename="$internalModuleName" actionname="$moduleAction.getActionName()">&laquo; $moduleAction &raquo;</button>
+##    		  #end
+##    		#end
     	  </span></h2>
     	  #if(($moduleActions.size()>0) && (!$mobile_device) && (!$edit_nav) && ($user.getUserType() != "LIMITED"))
         <ul parent="$internalModuleName" class="moduleaction">
