--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -95,7 +95,7 @@ div#wrapper table#reportData #fieldFilters td {
   height: 20px;
 }
 
-table#reportData thead tr#fieldFilters input { 
+#fieldFilters input { 
   width:100%;
   border-radius: 0.5em;
   border: 1px solid #cecece;
