Style filter boxes in reports with headings

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -95,8 +95,13 @@ div#wrapper table#reportData #fieldFilters td {
   height: 20px;
 }
 
-#fieldFilters input { 
+table#reportData thead tr#fieldFilters input { 
   width:100%;
+  border-radius: 0.5em;
+  border: 1px solid #cecece;
+}
+
+div#fieldFilters input {
   border-radius: 0.5em;
   border: 1px solid #cecece;
 }
