--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -48,6 +48,7 @@
         #foreach($tableField in $tableFields)
           #if((!$tableField.getHidden()) && (!$tableField.equals($pKey)))
             #set($tableDeleteEnabled = false)
+            Field $tableField stops table deletion<p>
             #set($reason = "Please remove all table fields before deleting the table")
           #end
         #end
