Grey tabs instead of white

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -824,7 +824,7 @@ div#reportData {
 }
 
 .form_tabber .tab_choice.no_records {
-  color: white;
+  color: #777777;
 }
 
 .form_tabber .tab_choice:first-child {
