--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -821,6 +821,7 @@ div#reportData {
   transition-property: background-color, color;
   transition-duration: 1s;
   background-color: none; /* #f4f4f4 */
+  text-shadow: 0px 0px 2em white;
 }
 
 .form_tabber .tab_choice.no_records {
