--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -59,7 +59,7 @@
   </tr>
   <tr>
     <td>
-      Privileges:<br><span class='greytext'><i>In order to view this report, users need access to the following tables:</i></span>
+      Privileges:<br><span class='greytext'><i>In order to view this report, users need access to these tables</i></span>
     </td>
     <td>
       $view.getTablesNecessaryToViewReport($report)
