--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -117,7 +117,6 @@
 		  #end
 	  #end
 	#if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
-	  $viewTools.log("Edit")
 	    <script language=Javascript>
        var jqDoc = $(top.document);
  	     jqDoc.find('#button_new').removeAttr('disabled');
@@ -152,9 +151,11 @@
            jqDoc.find('#button_delete').setAttribute('disabled','true');
            jqDoc.find('#button_import').setAttribute('disabled','true');
         	 #if($view.loggedInUserAllowedTo('VIEW_TABLE_DATA',$sessionTable))
+        	   $viewTools.log("User allowed to view $sessionTable")
 	    	    jqDoc.find('#button_export').removeAttr('disabled');
    	     		jqDoc.find('#button_print').removeAttr('disabled');
         	 #else
+        	   $viewTools.log("Not allowed to view $sessionTable")
         		jqDoc.find('#button_export').setAttribute('disabled','true');
         		jqDoc.find('#button_print').setAttribute('disabled','true');
            #end
