--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -138,16 +138,19 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		    #set($rightAlign = true)
       #end
       #set($image = false)
-			#set($textValue = false)
+	  #set($textValue = false)
       #if($fieldCategory == "FILE")
         #set($fileValue = $viewTools.getFileValueTool($cell))
+        #set($attachmentType = $field.getAttachmentType().name())
         #if($fileValue.isImage())
           #set($image = true)
           #set($srcUrl = "/agileBase/uploads/$sessionTable.getInternalTableName()/$field.getInternalFieldName()/$thisUniqueId/$fileValue.40.$fileValue.getExtension()")
           #set($cell = "<img src='$srcUrl' />")
+          #set($cellContentLength=40)
         #else
-          #set($placeholderIcon = "${field.getAttachmentType().name().toLowerCase()}.png")
-          #if($placeholderIcon.equals("profile_photo.png"))
+          #set($placeholderIcon = "${attachmentType.toLowerCase()}.png")
+          #if($attachmentType == "PROFILE_PHOTO")
+            #set($image = true)
             #set($srcUrl = "/agileBase/resources/icons/file_placeholders/$placeholderIcon")
             #set($cell = "<img src='$srcUrl' />")
           #end
@@ -168,7 +171,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		  #if($colour && $colour !="") #set($style="background-color:$colour; ") #set($class="colored") #end
 		  #if($rightAlign) #set($style = "$style text-align:right; ") #end
           <td #if($cellContentLength<=10)nowrap="true"#end #if($style != "")style="$style"#end #if($class != "")class="$class"#end>
-            <div style="min-width:${cellContentLength}px" #if(($cellContentLength > $cellLengthThreshold) || $image) class="in_cell" #end>
+            <div style="min-width:${cellContentLength}px" #if(($cellContentLength > $cellLengthThreshold) || $image) class="in_cell #if($attachmentType == 'PROFILE_PHOTO')p_photo #end" #end>
 							#if($textValue.isURL())<img class="favicon" src="https://getfavicon.appspot.com/$textValue.getFormattedURL()?defaulticon=lightpng" />&nbsp;#end##
               #if(!(($thisUniqueId == $lastUniqueId) && ($cell == $lastValues.get($cellNumber))))$cell#else<span class="greytext">$cell</span>#end
             </div>
