--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -138,6 +138,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		    #set($rightAlign = true)
       #end
       #set($image = false)
+      #set($attachmentType = '')
 	  #set($textValue = false)
       #if($fieldCategory == "FILE")
         #set($fileValue = $viewTools.getFileValueTool($cell))
