--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -228,7 +228,7 @@ table#reportData tr.rowa td {
 	overflow:visible;
 	font-weight: bold;
   /* text-shadow: 0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white; /*
-  text-shadow: 0px 0px 0.5em white, 0px 0px 0.53m white;
+  text-shadow: 0px 1px 2px white, 0px 1px 2px white;
   position: relative;
   z-index: 999;
 }
