--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -222,6 +222,7 @@ table#reportData tr.rowa td {
 .in_cell {
   max-height: 43px;
   overflow: hidden;
+  float: left;
 }
 
 .in_cell:hover {
@@ -231,6 +232,7 @@ table#reportData tr.rowa td {
   text-shadow: 0px 1px 2px white, 0px 1px 2px white;
   position: relative;
   z-index: 999;
+  background-color: white;
 }
 
 .p_photo {
