--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -234,6 +234,7 @@ table#reportData tr.rowa td {
   text-shadow: 0px 1px 2px white, 0px 1px 2px white;
   position: relative;
   z-index: 999;
+  background-color: red;
 }
 
 .p_photo {
