--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -228,7 +228,7 @@ table#reportData tr.rowa td {
 .in_cell:hover {
 	overflow:visible;
   /* text-shadow: 0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white; */
-  text-shadow: 0px 1px 1px white,0px 0px 0.1em white;
+  text-shadow: 0px 0px 1px white,0px 0px 2px white,0px 0px 3px white,0px 0px 4px white;
   position: relative;
   z-index: 999;
   color: black;
@@ -239,7 +239,6 @@ table#reportData tr.rowa td {
 }
 
 #currentRow .in_cell:hover {
-  font-weight: bold;
   /* text-shadow: 0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef,0px 0px 1em #dde6ef; */
 }
 
