Template management from the printout screen

--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -158,6 +158,10 @@
       var subject = jqTitle.text();
       document.location="mailto:?subject=" + encodeURIComponent(subject) + "&body=" + encodeURIComponent(bodyText);
     }
+    
+    function fManage() {
+      oIframe.contentWindow.document.location = "AppController.servlet?return=gui/printouts/manage";
+    }
 
       
         function fCreateButton(sCaption,sImg,sTooltip,fClick) {
@@ -226,9 +230,11 @@
         var oToolbar=document.createElement('div');
         oToolbar.setAttribute('id','toolbarDiv');
         
+        ## First button will be at the right end of the toolbar, successive moving left
+        fCreateButton('Close','resources/toolbar/delete_only.png','Close the print preview',fClose);
+        fCreateButton('Manage','resources/toolbar/spanner.png','Upload and delete custom templates',fManage);
         fCreateButton('Print','resources/toolbar/print_only.png','Print this content',fPrint);
         fCreateButton('Email','resources/toolbar/email_only.png','Email this content',fEmail);
-        fCreateButton('Close','resources/toolbar/delete_only.png','Close the print preview',fClose);
         fCreatePrintoutSelector('Print out:',fSelectPrintoutType);
 		
         document.body.appendChild(oToolbar);
