--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/manage.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/manage.vm
@@ -48,13 +48,13 @@
 	    #set($filePath = $template.getName())
 	    #set($slashIndex = $filePath.lastIndexOf('/') + 1)
 	    #set($fileName = $filePath.substring($slashIndex))
-	    <a href="ReportDownloader.servlet?template=$fileName">$fileName</a> <a href="?return=gui/reports_and_tables/pane3&remove_custom_template=true&customtemplatename=$fileName"><img src="resources/toolbar/delete.png" alt="delete $fileName" style="width:13px; height:13px"></a><br>
+	    <a href="ReportDownloader.servlet?template=$fileName">$fileName</a> <a href="?return=gui/printouts/manage&remove_custom_template=true&customtemplatename=$fileName"><img src="resources/toolbar/delete.png" alt="delete $fileName" style="width:13px; height:13px"></a><br>
 	  #end
 	  <p>
   #end
 Upload a new template for $report: 
 <form class="fileUploader" method="POST" action="AppController.servlet">
-<input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
+<input type="hidden" name="return" value="gui/printouts/manage" />
 <input type="hidden" name="upload_custom_template" value="true" />
 <input type="file" name="templatename" class="submit-trigger" onChange="uploadFile(this);" />
 <div class="upload_progress_container">
